# waveshare-barcodescanner-rs

./: Cargo.toml  LICENSE  README.md
.github/: release-drafter.yml
.github/workflows/: publish.yml  release-drafter.yml  release.yml  rust.yml  waveshare-barcodescanner-rust.yml
examples/: get_version.rs  read_barcode.rs
src/: crc.rs  interface.rs  lib.rs
